<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fr.univtln.faudouard595.solarsystem</groupId>
  <artifactId>solarsystem</artifactId>
  <version>0.1.0-SNAPSHOT</version>

  <name>solarsystem</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <!-- JMonkeyEngine -->
    <jme3_g>org.jmonkeyengine</jme3_g>
    <jme3_v>3.6.1-stable</jme3_v>
  </properties>


  <dependencies>

<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
  <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.36</version>
      <scope>provided</scope>
  </dependency>

<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
<dependency>
    <groupId>ch.qos.logback</groupId>
    <artifactId>logback-classic</artifactId>
    <version>1.5.17</version>
    <scope>compile</scope>
</dependency>


    <dependency>
      <groupId>${jme3_g}</groupId>
      <artifactId>jme3-core</artifactId>
      <version>${jme3_v}</version>
    </dependency>

    <dependency>
      <groupId>${jme3_g}</groupId>
      <artifactId>jme3-desktop</artifactId>
      <version>${jme3_v}</version>
    </dependency>

    <dependency>
      <groupId>${jme3_g}</groupId>
      <artifactId>jme3-effects</artifactId>
      <version>${jme3_v}</version>
    </dependency>


    <dependency>
      <groupId>${jme3_g}</groupId>
      <artifactId>jme3-lwjgl3</artifactId>
      <version>${jme3_v}</version>
    </dependency>

<!-- test -->
      <dependency>
      <groupId>${jme3_g}</groupId>
      <artifactId>jme3-testdata</artifactId>
      <version>${jme3_v}</version>
    </dependency>
    <!-- test/ -->


    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.15.2</version>
    </dependency>

    <dependency>
      <groupId>com.simsilica</groupId>
      <artifactId>lemur</artifactId>
      <version>1.16.0</version>
    </dependency>
<!-- https://mvnrepository.com/artifact/com.simsilica/lemur-proto -->
<dependency>
    <groupId>com.simsilica</groupId>
    <artifactId>lemur-proto</artifactId>
    <version>1.13.0</version>
</dependency>

    <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
    <dependency>
      <groupId>org.codehaus.groovy</groupId>
      <artifactId>groovy-all</artifactId>
      <version>3.0.23</version>
      <type>pom</type>
    </dependency>


  </dependencies>

  <build>
  <finalName>solarsystem</finalName>

      <plugins>
        <!-- clean lifecycle, see
        https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see
        https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.0</version>
          <executions>
              <execution>
                  <phase>process-resources</phase>
                  <goals>
                      <goal>resources</goal>
                  </goals>
              </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>

        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <!-- site lifecycle, see
        https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.6.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.4.1</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>shade</goal>
              </goals>
              <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
                <transformers>
                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                    <mainClass>fr.univtln.faudouard595.solarsystem.App</mainClass>
                  </transformer>
                </transformers>
              </configuration>
            </execution>
          </executions>
        </plugin>

      </plugins>

  </build>
</project>